fixed js and style

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="root">
+    <div id="container" class="container">
         <h1>Hello World !!!</h1>
     </div>
-    <script src="script.js" />
+    <script src="script.js" ></script>
 </body>
 </html>
