--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div id="container" class="container">
-        <h1>Hello World !!!</h1>
+        <h1>Title Here</h1>
+        <p>simple comment here.</p>
+        <label for="myInput">Enter your name: <input type="text" id="myInput" class="myInput" placeholder="Name" /></label>
+        <button type="button" id="myButton" class="myButton">Submit</button>
+        <p id="demo"></p>
     </div>
     <script src="script.js" ></script>
 </body>
